increase JVM memory for unit tests on circleCI

--- a/build.xml
+++ b/build.xml
@@ -132,7 +132,7 @@
 	
 	
 	<target name="test" depends="test-compile">
-		<junit printsummary="on" haltonfailure="yes" fork="true" showoutput="yes">
+		<junit printsummary="on" haltonfailure="yes" fork="true" showoutput="yes" maxmemory="128m">
 			<classpath>
 				<path refid="classpath.test"/>
 				<pathelement location="${test.build.dir}"/>
