--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-formatter_profile=org.eclipse.jdt.ui.default.sun_profile
+formatter_profile=_CRG Conventions
 formatter_settings_version=14
