Use utf-8 charset for html and other text responses.
The version of jetty we're using really doesn't
make setting this correctly easy. Hack in the charset in
the mime entries, overriding what Jetty has by default.

--- a/build.xml
+++ b/build.xml
@@ -108,6 +108,10 @@
 			</classpath>
 		</javac>
 
+		<copy todir="${dest.dir}">
+			<fileset dir="${src.dir}" includes="**/*.properties"/>
+		</copy>
+
 		<mkdir dir="${jar.dir}"/>
 		<one-jar destfile="${jar.dir}/${jar.file}" manifest="${jar.dir}/one-jar.mf" mainmanifest="${jar.dir}/${manifest.file}">
 			<main>
