Move game-data saves under html
allowing to maintain the files with the media manager infratructure

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ html/images/fullscreen
 !html/images/fullscreen/overlay.png
 html/videos/fullscreen
 !html/videos/fullscreen/American Flag.webm
+html/game-data
+html/custom
+!html/custom/view/example.html
 GameData
 android/.gradle/
 android/assets/
