The reviewer is why we can't have nice things
- remove statsbooks folder
- remove possibility to give custom name to game data files
- remove preview for game-data files
- keep selected tab on operator screen across reloads

--- a/build.xml
+++ b/build.xml
@@ -240,6 +240,7 @@
 				<exclude name="html/images/sponsor_banner/*" />
 				<include name="html/images/teamlogo" />
 				<include name="html/images/sponsor_banner" />
+				<exclude name="html/game-data/json/*" />
 				<include name="lib/crg-scoreboard.jar" />
 				<include name="config/crg.scoreboard.properties" />
 				<include name="config/penalties/**" />
