Add unit tests for the event package
This probably misses some special case behaviour that other classes rely upon but
should cover the most commonly used cases.

--- a/build.xml
+++ b/build.xml
@@ -147,7 +147,7 @@
 			</classpath>
 			<formatter type="brief" usefile="false" />
 				<batchtest>
-					<fileset dir="${test.src.dir}" includes="**/*Test*.java" />
+					<fileset dir="${test.src.dir}" includes="**/*Tests.java" />
 				</batchtest>
 		</junit>
 	</target>
