--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: brianbrazil/crg-ci:jdk7-ant
+      - image: circleci/openjdk:8-jdk
     steps:
       - checkout
       - run: ant
