--- a/.project
+++ b/.project
@@ -36,5 +36,14 @@
 				<arguments>1.0-name-matches-false-false-test-bin</arguments>
 			</matcher>
 		</filter>
+		<filter>
+			<id>1640009148586</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
 	</filteredResources>
 </projectDescription>
