--- a/.classpath
+++ b/.classpath
@@ -29,9 +29,12 @@
 	<classpathentry kind="lib" path="lib/deps/simpleclient-0.14.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/twitter4j-async-4.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/deps/twitter4j-core-4.0.7.jar"/>
-	<classpathentry kind="lib" path="test-libs/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="test-libs/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="test-libs/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="test-libs/junit-4.13.2.jar"/>
+	<classpathentry kind="lib" path="test-libs/hamcrest-2.2.jar"/>
+	<classpathentry kind="lib" path="test-libs/mockito-core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="test-libs/byte-buddy-1.12.6.jar"/>
+	<classpathentry kind="lib" path="test-libs/byte-buddy-agent-1.12.6.jar"/>
+	<classpathentry kind="lib" path="test-libs/objenesis-3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
