--- a/build.xml
+++ b/build.xml
@@ -36,9 +36,12 @@
 	<import file="${one-jar.dist.dir}/one-jar-ant-task.xml" optional="true" />
 
 	<path id="classpath.test">
-		<pathelement location="test-libs/junit-4.11.jar"/>
-		<pathelement location="test-libs/hamcrest-core-1.3.jar"/>
-		<pathelement location="test-libs/mockito-all-1.9.5.jar"/>
+		<pathelement location="test-libs/junit-4.13.2.jar"/>
+		<pathelement location="test-libs/hamcrest-2.2.jar"/>
+		<pathelement location="test-libs/mockito-core-4.2.0.jar"/>
+		<pathelement location="test-libs/byte-buddy-1.12.6.jar"/>
+		<pathelement location="test-libs/byte-buddy-agent-1.12.6.jar"/>
+		<pathelement location="test-libs/objenesis-3.2.jar"/>
 		<fileset dir="${jar.dir}" includes="deps/*.jar" />
 		<pathelement location="${dest.dir}"/>
 	</path>
