--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry kind="lib" path="lib/deps/apache-mime4j-0.6.jar"/>
-	<classpathentry kind="lib" path="lib/deps/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/deps/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/deps/commons-io-2.2.jar"/>
-	<classpathentry kind="lib" path="lib/deps/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/deps/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/deps/commons-compress-1.21.jar"/>
+	<classpathentry kind="lib" path="lib/deps/commons-fileupload-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/deps/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/deps/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/jackson-core-2.13.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/jackson-jr-objects-2.13.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/jetty-http-9.4.44.v20210927.jar"/>
@@ -20,8 +20,10 @@
 	<classpathentry kind="lib" path="lib/deps/websocket-common-9.4.44.v20210927.jar"/>
 	<classpathentry kind="lib" path="lib/deps/websocket-api-9.4.44.v20210927.jar"/>
 	<classpathentry kind="lib" path="lib/deps/servlet-api-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/deps/poi-4.1.2/poi-4.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/deps/poi-4.1.2/poi-ooxml-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/deps/poi-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/deps/poi-ooxml-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/deps/poi-ooxml-schemas-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/deps/xmlbeans-3.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/deps/simpleclient_common-0.14.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/simpleclient_hotspot-0.14.1.jar"/>
 	<classpathentry kind="lib" path="lib/deps/simpleclient_servlet-0.14.1.jar"/>
