Migrate defaults from file into code so an autosave that sets only some of the values won't leave the rest unset

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ test-bin
 release
 lib/crg-scoreboard.jar
 config/autosave
+config/*.xlsx
 html/stream
 html/images/teamlogo
 html/images/sponsor_banner
