Set OS Offset when applicable add rule to disable allow editing in frontend

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,7 @@
   "unused": false,
   "laxbreak": true,
   "browser": true,
-  "devel": true,
+  "devel": false,
   "curly": true,
   "esversion": 5,
   "shadow": "outer",
@@ -22,6 +22,7 @@
     "prepareLtSheetTable": true,
     "preparePltInputTable": true,
     "prepareTripEditor": true,
+    "prepareOsOffsetEditor": true,
     "prepareAnnotationEditor": true,
     "preparePenaltyEditor": true,
     "prepareFieldingEditor": true,
