--- a/.project
+++ b/.project
@@ -37,12 +37,12 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1640009148586</id>
+			<id>1667067588125</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
 				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
