--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/openjdk:8.0
+      - image: cimg/base:current-22.04
     steps:
       - run: sudo apt update && sudo apt -y install ant junit4
       - checkout
