--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ release
 lib/crg-scoreboard.jar
 logs
 config/autosave
-config/*.xlsx
+**/*.xlsx
 html/stream
 html/images/teamlogo
 html/images/sponsor_banner
