--- a/build.xml
+++ b/build.xml
@@ -218,6 +218,7 @@
 				<exclude name="html/images/sponsor_banner/*" />
 				<include name="html/images/teamlogo" />
 				<include name="html/images/sponsor_banner" />
+				<exclude name="html/themes/custom/*" />
 				<exclude name="html/game-data/json/*" />
 				<exclude name="html/game-data/xlsx/*" />
 				<include name="lib/crg-scoreboard.jar" />
